Added tests and fixed typo

--- a/Swyftx Python.ipynb
+++ b/Swyftx Python.ipynb
@@ -68,9 +68,9 @@
    "source": [
     "# Get account balances\n",
     "\n",
-    "btc_live_rates = swyftx.get_account_balances(headers = {'Authorization': f'Bearer {token}'}).json()\n",
+    "account_balances = swyftx.get_account_balances(headers = {'Authorization': f'Bearer {token}'}).json()\n",
     "\n",
-    "pd.DataFrame.from_dict(btc_live_rates)"
+    "pd.DataFrame.from_dict(account_balances)"
    ]
   },
   {
